--- a/Day03_Operator,Print/.project
+++ b/Day03_Operator,Print/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Day01_Peter</name>
+	<name>Day03_Operator,Print</name>
 	<comment></comment>
 	<projects>
 	</projects>
