--- a/Day05_Switch/.project
+++ b/Day05_Switch/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Day05_Switch</name>
+	<name>Day05_Switch,While</name>
 	<comment></comment>
 	<projects>
 	</projects>
