--- a/jspbasic2/WebContent/WEB-INF/web.xml
+++ b/jspbasic2/WebContent/WEB-INF/web.xml
@@ -2,11 +2,15 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>jspbasic2</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <!-- application에서 사용할 수 있는 준비가 되어있는 초기화 파라미터 값 -->
+  <context-param>
+  	<param-name>parameter1</param-name>
+  	<param-value>oracle.jdbc.driver.OracleDriver</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>parameter2</param-name>
+  	<param-value>testvalue</param-value>
+  </context-param>
 </web-app>
