--- a/myboard/.classpath
+++ b/myboard/.classpath
@@ -27,5 +27,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/tools/driver/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="D:/tools/apache-tomcat-9.0.37/lib/servlet-api.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://javaee.github.io/javaee-spec/javadocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
